# CodeBook

./: README.md
backend/: controls.sql  requirements.txt
backend/django/: pyproject.toml  requirements.txt
backend/django/biblioteca/: admin.py  models.py  serializers.py  views.py
backend/django/biblioteca/management/commands/: seed_categorias.py  seed_codigos.py
backend/django/biblioteca/migrations/: 0001_initial.py  0002_alter_codigo_descricao_alter_codigo_mododeusar.py  0002_alter_codigo_nome.py  0003_alter_codigo_linguagem.py
backend/django/config/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: headerComponent.vue  informationComponent.vue
frontend/src/router/: index.js
frontend/src/stores/: counter.js
frontend/src/views/: CSS.vue  HTML.vue  JS.vue  summaryApp.vue
